more updates on dependencies

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "mongoose": "^6.0.7",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "ansi-regex": ">=5.0.1"
   }
 }
