--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,10 +9,11 @@
   "author": "GreatCoders -> Himanshu lal",
   "license": "ISC",
   "dependencies": {
+    "ansi-regex": ">=5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "mongoose": "^6.0.7",
-    "nodemon": "^2.0.12",
-    "ansi-regex": ">=5.0.1"
+    "nodemon": "^2.0.12"
   }
 }
